--- a/public/index.html
+++ b/public/index.html
@@ -60,30 +60,20 @@
         <button onclick="clearError()">Clear error</button>
     </span>
     <div id="_mainbody"  style="display:none">
-        <p>
-            This is an empty TRC plugin that demonstrates calling PluginMain().
-        </p>
-        <p>
-            See <a href="https://github.com/Voter-Science/TrcLibNpm">https://github.com/Voter-Science/TrcLibNpm</a> for more information on writing plugions.
-        </p>
 
-        <h2>Basic sheet information:</h2>
-        <table>
-            <tr><td>Name:</td><td><div id="SheetName"></div></td></tr>
-            <tr><td>Parent:</td><td><div id="ParentSheetName"></div></td></tr>
-            <tr><td>Version:</td><td><div id="SheetVer"></div></td></tr>
-            <tr><td>Total Rows:</td><td><div id="RowCount"></div></td></tr>
-            <tr><td>Last refreshed:</td><td><div id="LastRefreshed"></div></td></tr>
-        </table> 
-        <div id="locInfo">
-        </div>
+        <p>This is used for copying geofencing from an existing sheet</p>
 
-        <button onclick="_plugin.onClickRefresh()">Refresh!</button>
+        <input id="otherSheetId">
+        <button onclick="_plugin.OnLookup()">Scan!</button>
 
-        <button onclick="_plugin.onGetSheetContents()">GetSheetContents!</button>
-        <div id="contents">
+      </br>
+        <textarea id="details" rows="20" cols=50></textarea>
 
-        <p>Congratulations! You made your first TRC plugin!</p>
+        <button onclick="_plugin.OnCopy()">Copy Geofencing!</button>
+
+       
+
+       
         </div>
     </div>
 </body>
